--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "BlockChain-Projekt",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev-test": "nodemon dev-test"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "homepage": "https://github.com/CC-04-SYSII-Blockchain/01_blockchain#readme",
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "crypto-js": "^4.1.1"
   }
 }
